--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
   height: 100vh;
   margin: 0;
 }
-#editor, #macro {
+#editor, #macro, #compiled {
   margin: 5px 0 0 0;
   width: 100%;
   height: 100%;
@@ -244,9 +244,10 @@ canvas {
   <body>
     <div id="tab">
       <ul>
-        <li><a href="#editor">Editor</a></li>
+        <li><a href="#editor" id="editorButton">Editor</a></li>
         <li><a href="#canvas">Canvas</a></li>
         <li><a href="#macro">Macro</a></li>
+        <li><a href="#compiled">Compiled</a></li>
         <li><a href="#docs">Document</a></li>
       </ul>
       <pre id="editor"></pre>
@@ -282,6 +283,7 @@ canvas {
         <input type="file" id="file"></input>
       </div>
       <pre id="macro"></pre>
+      <pre id="compiled"></pre>
       <div id="docs">
         <h1>EX3+ Document</h1>
         <h2>コレは何</h2>
@@ -538,7 +540,17 @@ $(_=>{
   macroEditor.setTheme("ace/theme/monokai");
   macroEditor.setFontSize(20);
   macroEditor.session.setMode("ace/mode/ex3");
+  var compiledEd = ace.edit("compiled");
+  compiledEd.setTheme("ace/theme/monokai");
+  compiledEd.setFontSize(20);
+  compiledEd.setReadOnly(true);
+  compiledEd.session.setMode("ace/mode/ex3");
+  ex3.onCompiled = srcs=>{
+    let ss = srcs.map(s=>s.indexOf(',')!=-1 ? s : s.match(/^\s*$/) ? "" : "    " + s);
+    compiledEd.session.getDocument().setValue(ss.join("\n"));
+  };
   function moveLine(ln){
+    $("#editorButton").click();
     editor.gotoLine(ln,0,false);
   }
   const initSource = localStorage.getItem('src');
@@ -744,7 +756,7 @@ $(_=>{
       img.src = url;
       img.onload = _=>{
         if(img.width!=128 || img.height!=128){
-          console.log("Not supported (invalid size)");
+          toastr.error("Not supported (invalid size)");
           return;
         }
         localStorage.setItem('sprite',url);
@@ -760,7 +772,7 @@ $(_=>{
     }
     function loadImage(f){
       if(!f || !f.type.match('image.*')){
-        console.log("Not supported (invalid file type)");
+        toastr.error("Not supported (invalid file type)");
         return;
       }
       const reader = new FileReader();
