--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@ body {
   font-size: 20px;
   font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace
 }
+.ui-tabs li.ui-state-active > a {
+  color: #fff;
+}
 #sprite {
   margin-left: 5px;
   border: 3px solid #777;
