--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@ canvas {
           <li>
             <b>SLP</b>: 次のフレームになるまで待機します。
           </li>
+          <li>
+            <b>RND</b>: 0~65535の範囲の乱数をACに格納します。
+          </li>
         </ul>
         <h2>Macroの使い方</h2>
         サンプル見たらだいたいわかると思う。
