--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ canvas {
         設定は自動保存なのでやめたいときはlocalStorageのそれっぽいのをふっ飛ばしてください。
         <h2>TODO</h2>
         <ul>
-          <li>なし</li>
+          <li>マクロ内でラベル生成</li>
         </ul>
         <div style="height:30px"></div>
       </div>
