--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ canvas {
         <ul>
           <li>選択スプライトを描画したい場所に設定します。(<b>SLX, SLY</b>)</li>
           <li>描画したいスプライトIDを書き込みます。(<b>WRT</b>)</li>
-          <li>(回転したい場合はその角度(0~3)を書き込みます。(<b>ROT</b>))</li>
+          <li>(回転したい場合はその角度(0~3)×64を加算して書き込んでください。)</li>
         </ul>
         動的スプライトを位置指定と共に描画するには次の手順を踏みます。
         <ul>
@@ -325,7 +325,7 @@ canvas {
             <li>ACをFFFFの状態で<b>SLX</b>した後に選択する動的スプライトの番号(0~4)で<b>SLY</b>してください。</li>
           </ul>
           <li>描画したいスプライトIDを書き込みます。(<b>WRT</b>)</li>
-          <li>(回転したい場合はその角度(0~3)を書き込みます。(<b>ROT</b>))</li>
+          <li>(回転したい場合はその角度(0~3)×64を加算して書き込んでください。)</li>
           <li>移動したい位置(-16~640,-16~480)を書き込みます。(<b>TRX, TRY</b>)</li>
         </ul>
         1フレームには約70000命令費やす事ができます。これを超えると描画がおかしくなると思います。
@@ -340,13 +340,10 @@ canvas {
             <b>SLX, SLY</b>: 選択スプライトのX,YをACに設定します。
           </li>
           <li>
-            <b>WRT</b>: 選択スプライトのスプライト番号をACに設定します。
+            <b>WRT</b>: 選択スプライトのスプライト番号をACに設定します。(2bit/6bitで回転角・番号)
           </li>
           <li>
             <b>TRX, TRY</b>: 選択スプライト(動的スプライト)の位置X,YをACに設定します。
-          </li>
-          <li>
-            <b>ROT</b>: 選択スプライトの角度(0~3)をACに設定します。反時計回りです。
           </li>
           <li>
             <b>BTN</b>: 現在の4ボタン{左上下右}の状態をACに格納します。
@@ -427,10 +424,10 @@ LoopX,
     SLX
     LDA Y
     SLY
-    LDA X
-    WRT
     LDA Y
-    ROT
+    MUL _64
+    ADD X
+    WRT
 
     @inc X
     @if (X>=W) goto LoopX
@@ -453,8 +450,6 @@ Main,
     @inc py
     LDA W
     WRT
-    LDA _0
-    ROT
     @if (py!=maxPY) goto Chara
     LDA m32
     STA px
@@ -521,6 +516,7 @@ _0,  DEC 0
 _1,  DEC 1
 _2,  DEC 2
 _3,  DEC 3
+_64, DEC 64
 
 Left,  HEX 8
 Down,  HEX 4
