FIX: pacman direction

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 ::-webkit-scrollbar-thumb:hover {
     background: rgba(100, 100, 100, 1.0);
 }
-body {
+html, body {
   overflow: hidden;
+}
+body {
   display: flex;
   width: 100vw;
   height: 100vh;
